Fixed issues with margin collapsing and not in flow elements
1. Element not applying margin collapsing between parent and first
   element when empty element was between them

2. Adjacent sibling not applying with in flow elements with not in flow
   element between them

--- a/examples/style.css
+++ b/examples/style.css
@@ -1,3 +1,3 @@
-p {
-  display: inline;
+#p1 {
+  position: absolute;
 }
